Tally an expansion's edges by source (#284)
edgesBySource counts what was RECORDED, keyed by Provenance.sourceId — an edge
IngestService refuses is absent from it, so the tally sums to edgesAdded or one
of the two numbers is lying. Insertion order is adapter order, which is the
order a report prints.

ExpansionOutcome.Expanded's copy changes with it. It used Map.copyOf, whose
iteration order is unspecified and salted per JVM: measured on this machine, a
two-entry copy came back in insertion order on two runs in ten and reversed on
the other eight, so an order-sensitive assertion over it is a coin flip. The
copy is now an unmodifiable LinkedHashMap, and a test pins the order at the
record rather than only through an expansion.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>